--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -9,4 +9,5 @@
   font-size: 36pt;
   color: #d9d9d9;
   -webkit-text-stroke: 1px #000000;
+  margin-left: -2px;
 }
