--- a/frontend/src/css/landing.css
+++ b/frontend/src/css/landing.css
@@ -25,8 +25,8 @@
   color: #ffffff;
 }
 
-.content {
-  margin: 0px 30px;
+.commands {
+  margin: 0px 40px;
 }
 
 .cursor {
