--- a/frontend/src/css/modal.css
+++ b/frontend/src/css/modal.css
@@ -13,6 +13,7 @@
 
 .modal-content {
   background-color: #2b2b2b;
+  opacity: 93%;
   margin: 15% auto;
   border: 1px solid #888;
   width: 60%;
